  * Removed patch html-template-ver.patch as it was applied upstream
  * Removed mod_perl_disable.patch as mod_perl issues now resolved upstream
    but add mod_perl.patch to debianize paths (Closes: #618416)
  * Upstream Makefile now generates some resources but had to be debianized
  * Raised standards version to 3.9.4
  * Added config file for license-reconcile and updated debian/copyright

 -- Nicholas Bamber <nicholas@periapt.co.uk>  Thu, 04 Oct 2012 12:16:23 +0100

w3c-markup-validator (1.2+dfsg-6) unstable; urgency=low

  * Changed to new location of w3c-sgml-lib files

 -- Nicholas Bamber <nicholas@periapt.co.uk>  Sat, 14 Apr 2012 13:17:45 +0100

w3c-markup-validator (1.2+dfsg-5) unstable; urgency=low

  * Corrected typo in VCS URL (Closes: #662735)

 -- Nicholas Bamber <nicholas@periapt.co.uk>  Wed, 07 Mar 2012 20:42:37 +0000

w3c-markup-validator (1.2+dfsg-4) unstable; urgency=low

  * Updated debian/copyright to latest format and corrected copyright,
    especially after a closer reading of notices in
    htdocs/scripts/mootools-1.2.5-core-nc.js
  * Raised standards version to 3.9.3
  * Removed unused lintian override
  * Removed patch restricting protocols to http and
    made an explicit dependency on liblwp-protocol-https (Closes: #445265)

 -- Nicholas Bamber <nicholas@periapt.co.uk>  Sat, 03 Mar 2012 15:57:12 +0000

w3c-markup-validator (1.2+dfsg-3) unstable; urgency=low

  * Changed Maintainership as the repository is no longer that of
    the Debian XML/SGML group
  * Updated copyright
  * Fixed various broken dependencies including broadening apache2 dependency to
    include httpd-cgi (Closes: #627962). The reason for this
    was that there seems to be no prospect of seeing the debate
    in http://lists.debian.org/debian-devel/2012/01/msg00148.html
    resolved in a satisfactory manner.
  * Updated debhelper version and compat level to 8

 -- Nicholas Bamber <nicholas@periapt.co.uk>  Thu, 09 Feb 2012 20:37:22 +0000
